<resources>
    <string name="app_name">MemoryCar</string>
    <string name="img_logo_description">img_logo</string>
    <string name="app_name_mainscreen">MemCar</string>
    <string name="mainScreen_btn">Continue</string>
    <string name="version">v1.0</string>
    <string name="username_placeholder">UserName</string>
    <string name="carname_placeholder">CarName</string>
    <string name="taxdue">TaxDue</string>
    <string name="mileage">Mileage</string>
    <string name="insurancedue">InsDue</string>
    <string name="fab_btn">fab_btn</string>
</resources>